--- a/public/options.html
+++ b/public/options.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>My Test Extension Options</title>
-  <script src="js/vendor.js"></script>
+  <link rel="stylesheet" href="options.css">
+  <script src="vendor.js"></script>
+  <script src="react.js"></script>
+  <script src="antd.js"></script>
 </head>
 
 <body>
   <div id="root"></div>
-  <script src="js/options.js"></script>
+  <script src="options.js"></script>
 </body>
+
 </html>
