--- a/public/popup.html
+++ b/public/popup.html
@@ -1,13 +1,18 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Getting Started Extension's Popup</title>
-    <script src="js/vendor.js"></script>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script src="js/popup.js"></script>
-  </body>
-</html>
 
+<head>
+  <meta charset="UTF-8">
+  <title>Gitee图🛏️</title>
+  <link rel="stylesheet" href="popup.css">
+  <script src="vendor.js"></script>
+  <script src="react.js"></script>
+  <script src="antd.js"></script>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script src="popup.js"></script>
+</body>
+
+</html>
